# ge-fangame

./: .gersemirc  .gitignore  .gitmodules  CMakeLists.txt  FISHING_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  LORE.md  MENU_IMPLEMENTATION.md  README.md  README_EN.md  SCENE_FLOW.md  TESTING_GUIDE.md  flake.nix
.github/workflows/: ci.yml
cmake/: arm-none-eabi.cmake
docs/: GAMEPLAY_ENHANCEMENTS.md  GAMEPLAY_INVENTORY_IMPLEMENTATION.md  GAMEPLAY_INVENTORY_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MENU_IMPLEMENTATION.md  SCENE_FLOW.md  SETTINGS_CREDITS_IMPLEMENTATION.md  UI_FLOW_DIAGRAM.md
ge-app/: CMakeLists.txt
ge-app/assets/: BIN2C_USAGE.md  CMakeLists.txt  README.md  README.txt  ambient-bgm.fur  ambient-bgm.raw  bin2c.py  bin2c_texture.py  gen_clouds.py  loop.raw  ttf_to_bitmap_font.py
ge-app/assets/scripts/: bin2c.py  bin2c_audio.py  bin2c_bitmap_font.py  bin2c_clouds.py  bin2c_image.py
ge-app/assets/src/fonts/Pixeloid/: License.txt
ge-app/assets/src/sounds/: menu-bgm.fur
ge-app/assets/src/textures/: boat_n.xcf  clouds.xcf  compass-base.aseprite  compass-base.xcf  compass-needle.aseprite  compass-needle.xcf  default-boat.aseprite  dialog.xcf  management-bg.xcf  menu-bg.kra  moon.xcf  sign.xcf  sun.xcf  watertexture.xcf  watertexture0.xcf  watertexture1.xcf  watertexture2.xcf  wave_e0.xcf  wave_e1.xcf  whirlpool.xcf
ge-app/include/ge-app/: aabb.hpp  arrayvec.hpp  font.hpp  rng.hpp  text.hpp  texture.hpp  timer.hpp
ge-app/include/ge-app/assets/: bgm.hpp
ge-app/include/ge-app/game/: boat.hpp  clock.hpp  compass.hpp  dock.hpp  fishing.hpp  inventory.hpp  mode_indicator.hpp  perspective.hpp  player_stats.hpp  sky.hpp  tutorial_system.hpp  water.hpp
ge-app/include/ge-app/gfx/: color.hpp  dialog_box.hpp  shape_utils.hpp
ge-app/include/ge-app/scenes/: README.md  base.hpp  buzz.hpp  credits_scene.hpp  dialog.hpp  dialog_scene.hpp  game_scene.hpp  inventory_scene.hpp  main.hpp  management_menu_scene.hpp  menu_scene.hpp  root_management_ui_scene.hpp  root_scene.hpp  scene.hpp  settings_scene.hpp  status_scene.hpp
ge-app/include/ge-app/scenes/game/: bgm.hpp  gameover.hpp  main.hpp
ge-app/include/ge-app/scenes/game/hud/: clock.hpp  compass.hpp  main.hpp  mode_indicator.hpp  y_hud.hpp
ge-app/include/ge-app/scenes/game/management/: inventory.hpp  main.hpp  map.hpp  menu.hpp  status.hpp
ge-app/include/ge-app/scenes/game/world/: boat.hpp  dock.hpp  fishing.hpp  main.hpp  obstacles.hpp  sky.hpp  time_update.hpp  water.hpp
ge-app/include/ge-app/scenes/menu/: credits.hpp  main.hpp  menu_bgm.hpp  select.hpp  settings.hpp
ge-app/include/ge-app/ui/: menu.hpp  option_selector.hpp  slider.hpp
ge-app/src/: main.cpp  main.cpp.old
ge-app/src/ge-app/: font.cpp  rng.cpp  root_management_ui_scene.cpp  text.cpp
ge-app/src/ge-app/assets/: bgm.cpp
ge-app/src/ge-app/game/: sky.cpp  water.cpp
ge-app/src/ge-app/scenes/: buzz.cpp  dialog.cpp  inventory_scene.cpp  main.cpp  management_menu_scene.cpp  status_scene.cpp
ge-app/src/ge-app/scenes/game/: bgm.cpp  gameover.cpp  main.cpp
ge-app/src/ge-app/scenes/game/hud/: clock.cpp  compass.cpp  main.cpp  mode_indicator.cpp  y_hud.cpp
ge-app/src/ge-app/scenes/game/management/: inventory.cpp  main.cpp  map.cpp  menu.cpp  status.cpp
ge-app/src/ge-app/scenes/game/world/: boat.cpp  dock.cpp  fishing.cpp  main.cpp  obstacles.cpp  sky.cpp  time_update.cpp  water.cpp
ge-app/src/ge-app/scenes/menu/: credits.cpp  main.cpp  menu_bgm.cpp  select.cpp  settings.cpp
ge-hal/: CMakeLists.txt  linker.ld
ge-hal/include/ge-hal/: app.hpp  core.hpp  fb.hpp  gpu.hpp  surface.hpp
ge-hal/include/ge-hal/stm/: dma2d.hpp  framebuffer.hpp  gpio.hpp  joystick.hpp  rcc.hpp  rng.hpp  sdram.hpp  spi.hpp  time.hpp  uart.hpp
ge-hal/src/: app_pc.cpp
ge-hal/src/pc/: app.cpp  gpu.cpp
ge-hal/src/stm/: app.cpp  dma2d.cpp  framebuffer.cpp  gpio.cpp  rng.cpp  sdram.cpp  spi.cpp  startup.cpp  syscalls.cpp  time.cpp  uart.cpp
scripts/: debug.sh  flash.sh  run.sh
